update pods, firebase permissions, correct constraints

--- a/TravelApp/GoogleService-Info.plist
+++ b/TravelApp/GoogleService-Info.plist
@@ -3,21 +3,21 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>527290347092-lai04ae1qvrhhvg3o39gkmfr3kucg8db.apps.googleusercontent.com</string>
+	<string>1042037705641-rtq2he8ud9abd59bud7t6t99mnn7e540.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.527290347092-lai04ae1qvrhhvg3o39gkmfr3kucg8db</string>
+	<string>com.googleusercontent.apps.1042037705641-rtq2he8ud9abd59bud7t6t99mnn7e540</string>
 	<key>API_KEY</key>
-	<string>AIzaSyC5nB_9TgTy1K1p_-sm3kMR24nlNv8esUk</string>
+	<string>AIzaSyDjtqzrzz53mjCnuxJDU53GBoPinfzvYG4</string>
 	<key>GCM_SENDER_ID</key>
-	<string>527290347092</string>
+	<string>1042037705641</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>v.staratsitarau.travellapp</string>
+	<string>com.mobile.ios.travelapp.starotitorov</string>
 	<key>PROJECT_ID</key>
-	<string>travel-app-24869</string>
+	<string>travelapp-aa9a2</string>
 	<key>STORAGE_BUCKET</key>
-	<string>travel-app-24869.appspot.com</string>
+	<string>travelapp-aa9a2.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,6 +29,8 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:527290347092:ios:0c0d022e8cbb612c4d07c1</string>
+	<string>1:1042037705641:ios:79052c0391afe4533c52b8</string>
+	<key>DATABASE_URL</key>
+	<string>https://travelapp-aa9a2.firebaseio.com</string>
 </dict>
 </plist>
